# TART

./: README.md  package.json
public/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: App.tsx
src/typings/: jpg.d.ts
