[package]
name = "your-package-name"
version = "0.0.0"
description = "YOUR_APPLICATION_DESCRIPTION"
authors = ["YOUR_NAME"]
license = ""
repository = "https://github.com/YOUR_NAME/YOUR_REPO_NAME"
default-run = "your-package-name"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rustfmt = { version = "0.10.0" }
tauri-build = { version = "1.0.0-rc.4", features = [] }

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
tauri = { version = "1.0.0-rc.4", features = ["updater"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
